--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -26,7 +26,6 @@
         android:id="@+id/txt_item_description"
         android:layout_width="match_parent"
         android:layout_height="@dimen/item_image_size"
-        android:text="texto largo"
         android:layout_toEndOf="@id/img_main"
         android:layout_marginTop="@dimen/general_margin"
         android:layout_marginEnd="@dimen/general_margin"
@@ -41,8 +40,7 @@
         android:layout_alignParentEnd="true"
         android:layout_marginTop="@dimen/general_margin"
         android:layout_marginBottom="@dimen/medium_margin"
-        android:layout_marginEnd="@dimen/general_margin"
-        android:text="$122.22" />
+        android:layout_marginEnd="@dimen/general_margin" />
 
     <TextView
         android:id="@+id/txt_actual_price"
@@ -52,8 +50,7 @@
         android:layout_below="@id/txt_item_description"
         android:layout_alignBaseline="@id/txt_previous_price"
         android:layout_marginEnd="@dimen/medium_margin"
-        android:layout_toStartOf="@id/txt_previous_price"
-        android:text="$99.99" />
+        android:layout_toStartOf="@id/txt_previous_price" />
 
     <View
         android:layout_width="match_parent"
