--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="general_margin">16dp</dimen>
     <dimen name="medium_margin">8dp</dimen>
     <dimen name="space">12dp</dimen>
+    <dimen name="toolbar_margin">14.5sp</dimen>
 
     <dimen name="title">18sp</dimen>
     <dimen name="medium_text">14sp</dimen>
@@ -12,4 +13,5 @@
     <dimen name="item_height">200dp</dimen>
     <dimen name="item_image_size">100dp</dimen>
     <dimen name="line_height">2dp</dimen>
+    <dimen name="elevation">4dp</dimen>
 </resources>
