--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="blue">#398DE3</color>
     <color name="dark_blue">#0060b0</color>
     <color name="light_gray">#7b8e9d</color>
+    <color name="ultra_light_gray">#F0F2F5</color>
 
     <color name="text_color">#232f39</color>
 
