--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -14,4 +14,6 @@
     <dimen name="item_image_size">100dp</dimen>
     <dimen name="line_height">2dp</dimen>
     <dimen name="elevation">4dp</dimen>
+    <dimen name="corner_radius">10dp</dimen>
+    <dimen name="thin_line_height">1dp</dimen>
 </resources>
