--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -9,11 +9,11 @@
         android:id="@+id/img_main"
         android:layout_width="@dimen/item_image_size"
         android:layout_height="@dimen/item_image_size"
-        android:src="@drawable/image"
-        android:layout_marginTop="@dimen/general_margin"
         android:layout_marginStart="@dimen/general_margin"
+        android:layout_marginTop="@dimen/general_margin"
+        android:layout_marginEnd="@dimen/space"
         android:layout_marginBottom="@dimen/space"
-        android:layout_marginEnd="@dimen/space"/>
+        android:src="@drawable/image" />
 
     <CheckBox
         android:id="@+id/chk_fav"
@@ -25,6 +25,16 @@
         android:layout_marginBottom="@dimen/medium_margin"
         android:button="@null"
         android:background="@drawable/fav_checkbox"/>
+
+    <TextView
+        android:id="@+id/badge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@id/img_main"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="@dimen/general_margin"
+        android:text="@string/best_seller"
+        style="@style/Badge"/>
 
     <TextView
         android:id="@+id/txt_item_description"
