--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,10 +4,12 @@
     <dimen name="medium_margin">8dp</dimen>
     <dimen name="space">12dp</dimen>
     <dimen name="toolbar_margin">14.5sp</dimen>
+    <dimen name="minor_margin">2dp</dimen>
 
     <dimen name="title">18sp</dimen>
     <dimen name="medium_text">14sp</dimen>
     <dimen name="small_text">12sp</dimen>
+    <dimen name="minor_text_size">8sp</dimen>
 
     <dimen name="fav_icon_size">40dp</dimen>
     <dimen name="item_height">200dp</dimen>
