--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,44 +19,36 @@
             layout="@layout/toolbar" />
 
 
-        <ImageButton
-            android:id="@+id/btn_filter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/included_toolbar"
-            android:layout_alignBottom="@id/sv_products"
-            android:layout_alignParentEnd="true"
-            android:layout_marginEnd="@dimen/general_margin"
-            android:background="@null"
-            android:src="@drawable/ic_filter" />
+<!--        <ImageButton-->
+<!--            android:id="@+id/btn_filter"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@id/included_toolbar"-->
+<!--            android:layout_alignBottom="@id/sv_products"-->
+<!--            android:layout_alignParentEnd="true"-->
+<!--            android:layout_marginEnd="@dimen/general_margin"-->
+<!--            android:background="@null"-->
+<!--            android:src="@drawable/ic_filter" />-->
 
-        <androidx.appcompat.widget.SearchView
-            android:id="@+id/sv_products"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/included_toolbar"
-            android:layout_marginStart="@dimen/general_margin"
-            android:layout_marginEnd="@dimen/medium_margin"
-            android:layout_toStartOf="@id/btn_filter"
-            android:background="@drawable/rounded_bg"
-            app:iconifiedByDefault="false"
-            app:queryBackground="@drawable/rounded_bg"
-            app:queryHint="@string/search_hint"
-            app:submitBackground="@drawable/rounded_bg" />
-
-        <View
-            android:id="@+id/divider"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/thin_line_height"
-            android:background="@color/light_gray"
-            android:layout_below="@id/sv_products"
-            android:layout_marginTop="@dimen/medium_margin"/>
+<!--        <androidx.appcompat.widget.SearchView-->
+<!--            android:id="@+id/sv_products"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@id/included_toolbar"-->
+<!--            android:layout_marginStart="@dimen/general_margin"-->
+<!--            android:layout_marginEnd="@dimen/medium_margin"-->
+<!--            android:layout_toStartOf="@id/btn_filter"-->
+<!--            android:background="@drawable/rounded_bg"-->
+<!--            app:iconifiedByDefault="false"-->
+<!--            app:queryBackground="@drawable/rounded_bg"-->
+<!--            app:queryHint="@string/search_hint"-->
+<!--            app:submitBackground="@drawable/rounded_bg" />-->
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_products"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@id/divider"/>
+            android:layout_below="@id/included_toolbar"/>
 
         <include
             android:id="@+id/included_pb"
