--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,5 @@
     <dimen name="elevation">4dp</dimen>
     <dimen name="corner_radius">10dp</dimen>
     <dimen name="thin_line_height">1dp</dimen>
+    <dimen name="error_icon_size">100dp</dimen>
 </resources>
